--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,39 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
   </head>
   <body>
+
     <div id="content"></div>
-    <script type="text/babel" src="scripts/example.js"></script>
+
+
+
+    <script type="text/babel" src="scripts/mr/mr2.js"></script>
     <script type="text/babel">
-      // To get started with this tutorial running your own code, simply remove
-      // the script tag loading scripts/example.js and start writing code here.
+    
+    // var CommentBox = React.createClass({
+    //   render: function() {
+    //     return (
+    //       <div className="commentBox">
+    //         Hello, world! I am a CommentBox Cuong.
+    //       </div>
+    //     );
+    //   }
+    // });
+
+    // var CommentBox1 = React.createClass({
+    //   displayName: 'CommentBox',
+    //   render: function() {
+    //     return (
+    //       React.createElement('div', {className: "commentBox"},
+    //         "Hello, world! I am a CommentBox."
+    //       )
+    //     );
+    //   }
+    // });
+
+    // ReactDOM.render(
+    //   React.createElement(CommentBox1, null),
+    //   document.getElementById('content')
+    // );
     </script>
   </body>
 </html>
